EatMyMoviesSite/wwwroot/css/site.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');

html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }

    p {
        font-size: 20px;
    }

    h1 {
        font-size: 3vw;
    }

    h3 {
        font-size: 6vw;
    }

    .logo-text {
        font-size: 40px;
    }

    .logo {
        width: 20vw;
    }

    .list-button {
        width: 35%;
        height: 4vw;
    }

    .recommendation-button {
        font-size: 1vw;
        height: 4vw;
    }

    button:hover {
        transform: scale(1.05); /* Slight grow effect */
    }

    .tagline {
        font-size: 22px;
    }

    .poster-on-detail {
        max-height: 15vw;
    }

    .movie-title {
        font-size: 2vw;
    }

    .release-date {
        font-size: 1vw;
    }

    .movie-block {
        margin-left: 25%;
        width: 50%;
        padding: 1rem;
    }

    .genre-button {
        font-size: 1vw;
    }
}

@media (max-width: 768px) {
    h1 {
        font-size: 6vw;
    }

    h3 {
        margin: 15px;
    }

    .rounded-button {
        margin: 15px;
    }

    .opaque-box {
        width: fit-content;
        margin: auto;
    }

    .container {
        padding: 16px;
        max-width: 100%;
        overflow-x: hidden;
    }

    .logo-text {
        font-size: 30px;
    }

    .logo {
        width: 60vw;
    }

    small {
        font-size: 3.5vw;
    }

    .recommendation-button {
        font-size: 2.5vw;
        height: 10vw;
    }

    button:hover {
        transform: scale(1.1); /* Slight grow effect */
    }

    .find-out-more {
        font-size: 3vw;
    }

    .synopsis {
        font-size: 16px;
    }

    .tagline {
        font-size: 14px;
    }

    .release-date {
        font-size: 4vw;
    }

    .movie-title {
        font-size: 5vw;
    }

    .list-button {
        height: 10vw;
        font-size: 0.8rem; 
    }

    .poster-on-detail {
        max-height: 100vw;
    }
}


html {
    position: relative;
    height: 100%;
}

body {
    margin-bottom: 60px;
    overflow-x: hidden;
    height: 100%;
}

small {
    display: block;
    line-height: 1.6;
}

.container {
    min-height: 70%;
}

.detail-background {
    background-size: auto 200px;
    background-repeat: no-repeat;
    background-position: center center
}

.red-backlit-button {
    color: white;
    padding: calc(0.75em - 1px);
    margin: 0.5em;
    background: #e71837;
    box-shadow: 0px 0px 16px white;
    cursor: pointer;
    font-size: inherit;
}

.movie-title {
    color: rgba(0, 0, 0, 0.8);
    font-family: 'Malgun Gothic';
    font-weight: bold;
    display: -webkit-box;
    -webkit-line-clamp: 2; /* Limit to 2 lines */
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.poster {
    width: auto;
    height: auto;
    border-radius: 6px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
    transition: transform 0.3s ease; 
}

.bg {
    /*background-image: url('../../../movie-theater.jpg');*/
    background-color: #FDF0D5;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
    min-height: 100vh;
}

.logo-text {
    font-family: 'Bangers', cursive;
    color: #e71837;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 3px;
    font-weight: 800;
    line-height: 1.2;
    text-shadow: 0 1px 0px #CCCCCC, 1px 0 0px #EEEEEE, 1px 2px 0px #CCCCCC, 2px 1px 0px #EEEEEE, 2px 3px 0px #CCCCCC, 3px 2px 0px #EEEEEE, 3px 4px 0px #CCCCCC;
    padding-bottom: 15px;
    font-size: 2.5rem;
}

h1 {
    font-family: 'Bangers', cursive;
    color: #e71837;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 600;
    line-height: 1.3;
    text-shadow: 0 1px 0px #CCCCCC, 1px 0 0px #EEEEEE, 1px 2px 0px #CCCCCC, 2px 1px 0px #EEEEEE, 2px 3px 0px #CCCCCC, 3px 2px 0px #EEEEEE, 3px 4px 0px #CCCCCC;
    margin: 10px;
    text-align: center;
}

h2 {
    color: #333333;
    text-transform: none;
    letter-spacing: 0.5px;
    font-weight: 600;
    line-height: 1.4;
    margin-top: 20px;
    font-size: 1.8rem;
}


p {
    color: rgba(0, 0, 0, 0.8);
    font-weight: 600;
    font-size: 18px;
    padding: 6px;
}

.tagline {
    color: rgba(0, 0, 0, 0.8);
    font-weight: bold;
    display: block;
    text-align: center;
    margin-bottom: 8px;
}

.release-date {
   margin-bottom: 5px;
   font-weight: 600;
}

.opaque-box {
    /*background: rgba(0, 0, 0, 0.8);*/
    padding: 1.5em;
    text-align: center;
    /*width: fit-content;*/
}


.trailer-container {
    position: relative;
    overflow: hidden;
    width: 100%;
    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
    margin-top: 5%;
}

.responsive-iframe {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
}

.header-box-shadow {
    box-shadow: 0 1px 10px #e71837
}

.logo-text {
    font-family: 'Bangers', cursive;
    color: #e71837;
    letter-spacing: 2px;
    font-weight: 800;
    text-shadow: 0 1px 0px #CCCCCC, 1px 0 0px #EEEEEE, 1px 2px 0px #CCCCCC, 2px 1px 0px #EEEEEE, 2px 3px 0px #CCCCCC, 3px 2px 0px #EEEEEE, 3px 4px 0px #CCCCCC;
    padding: 10px;
    margin: 0 auto;
    text-align: center;
    font-size: 2.5rem; /* Adjust size for desktops */
    transition: color 0.3s ease, text-shadow 0.3s ease;
}

    /* Optional hover effect */
    .logo-text:hover {
        color: #ff002f; /* Slight color change on hover */
        text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2), 2px 2px 2px rgba(0, 0, 0, 0.2);
    }


/* Button*/

.cool-button {
    color: white;
    background: linear-gradient(45deg, #3273dc, #5a8dfc);
    box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.5);
    cursor: pointer;
    font-size: 18px;
    font-weight: bold;
    min-width: 150px;
    height: 50px;
    border: 2px solid transparent;
    border-radius: 12px; /* Rounded corners */
    transition: all 0.3s ease;
    position: relative;
    overflow: hidden;
    z-index: 1;
    padding: 10px; /* Add padding */
    margin: 10px; /* Add margin for spacing */
    text-align: center;
    font-family: 'Arial', sans-serif;
}

    .cool-button:before {
        content: "";
        position: absolute;
        top: 0;
        left: 50%;
        width: 300%;
        height: 300%;
        background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 10%, transparent 10%);
        transition: all 0.75s;
        transform: translateX(-50%) scale(0.5);
        opacity: 0;
        border-radius: 12px; /* Ensure the pseudo-element also has rounded corners */
    }

    .cool-button:hover:before {
        transform: translateX(-50%) scale(1);
        opacity: 1;
    }

    .cool-button:hover {
        background: linear-gradient(45deg, #5a8dfc, #3273dc);
        box-shadow: 0px 0px 24px rgba(255, 255, 255, 0.7);
        border-color: white;
        transform: scale(1.05); /* Slightly increase size on hover */
    }

    .cool-button:active {
        background: linear-gradient(45deg, #3273dc, #285fb5);
        box-shadow: 0px 0px 32px rgba(255, 255, 255, 0.9);
    }

    .cool-button span {
        display: block;
        position: relative;
        z-index: 2;
    }


.synopsis {
    text-align: center;
    font-weight: normal;
}

    .synopsis.desktop-only {
        display: block;
    }

    .synopsis.mobile-only {
        display: none;
    }

@media (max-width: 768px) {
    .synopsis.desktop-only {
        display: none;
    }

    .synopsis.mobile-only {
        display: block;
    }
}

.find-out-more {
    display: inline-block;
    color: #e71837; /* Bulma primary color */
    text-decoration: none;
    font-weight: bold;
    margin-top: 6px;
}

    .find-out-more:hover {
        text-decoration: underline;
    }

.movie-block {
    height: auto; /* Maintains aspect ratio */
    margin-top: 10px; /* Adds some space between text and logo */
    text-align: left;
    background-color: white;
    border-radius: 6px;
    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
    display: flex;
    flex-direction: column;
    justify-content: center; /* Center vertically */
}

.tmdb-logo {
    height: 15px;
}


@keyframes fadeIn {
    from {
        opacity: 0;
        transform: translateY(20px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes slideIn {
    from {
        opacity: 0;
        transform: translateX(-100%);
    }

    to {
        opacity: 1;
        transform: translateX(0);
    }
}

.question-area {
    animation: fadeIn 0.5s ease-out;
}

.movie-area {
    animation: slideIn 0.7s ease-out;
}

button {
    transition: background-color 0.3s ease, transform 0.3s ease;
}

    button:hover {
        background-color: #e71837;
        color: #fff;
    }

select {
    width: 100%;
    height: 150px;
    border: 1px solid #ddd;
    border-radius: 4px;
    padding: 8px;
}

.genre-button {
    width: 30%;
}

.list-button {
    width: 45%;
    margin: 5px;
    font-weight: bold; /* Make text bold */
    overflow: hidden;
    background-color: white;
    border: 2px solid #ccc;
    border-radius: 5px;
    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2);
    font-family: 'Poppins', sans-serif;
    color: #333;
    cursor: pointer;
    transition: box-shadow 0.2s ease, transform 0.2s ease;
}

    .list-button:active {
        box-shadow: inset 4px 4px 8px rgba(0, 0, 0, 0.3);
        transform: translateY(2px);
    }

.recommendation-button {
    width: 30%;
    border: 2px solid #e71837;
}

.wide-button {
    width: 80%;
}

.loading-spinner {
    width: 20%;
}

.progress-indicator {
    display: flex;
    justify-content: center;
    margin-bottom: 20px;
}

.progress-step {
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    background-color: #f0f0f0;
    color: #333;
    margin: 0 5px;
    font-weight: bold;
}

.progress-step.is-current {
    background-color: #e71837;
    color: white;
}

.progress-step.is-clickable {
    cursor: pointer;
}

.progress-step.is-clickable:hover {
    background-color: #cccccc;
}

.clickable-card {
    cursor: pointer;
    color: #4a4a4a;
    width: 100%;
    height: 100%;
    position: relative;
}

.card-synopsis {
    display: -webkit-box;
    -webkit-line-clamp: 10; /* Show 3 lines */
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.columns.is-mobile.is-hidden-desktop {
    display: flex; /* Enable flexbox */
    justify-content: center; /* Center horizontally */
    height: 100%; /* Ensure it takes the full height of the card */
    margin: 0; /* Reset margin to avoid extra spacing */
}

.tooltip-icon {
    position: relative;
    display: inline-block;
    cursor: pointer;
    margin-left: 10px;
}

.tooltip-text {
    visibility: hidden;
    background-color: #333;
    color: #fff;
    text-align: center;
    border-radius: 4px;
    padding: 5px;
    position: absolute;
    bottom: 100%;
    left: 50%;
    transform: translateX(-50%);
    opacity: 0;
    transition: opacity 0.3s;
    white-space: nowrap;
    font-size: 10px; 
    font-family: Arial, sans-serif; 
    font-weight: normal;
    text-shadow: none;
    line-height: unset;
    letter-spacing: unset;
    text-transform: unset;

}

.tooltip-icon:hover .tooltip-text {
    visibility: visible;
    opacity: 1;
}

